--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "rate-limiter-flexible": "^7.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
