--- a/vue/package.json
+++ b/vue/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
     "moment": "^2.30.1",
     "pinia": "^3.0.2",
+    "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
