--- a/vue/package.json
+++ b/vue/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
+    "lodash-es": "^4.17.21",
     "moment": "^2.30.1",
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.6",
