--- a/vue/package.json
+++ b/vue/package.json
@@ -16,7 +16,8 @@
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-toast-notification": "^3.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.2",
